--- a/todo
+++ b/todo
@@ -10,7 +10,7 @@
 # Warning: Don't manually edit this script. Please create issues.
 #
 # @author AnqurVanillapy
-# @date 21 October 2016
+# @date 22 October 2016
 # @version 0.1.0
 ################################################################################
 
@@ -18,9 +18,9 @@
 # `initloc': no todos
 # `loc': with todos
 # so todos_count = loc - initloc
-initloc=142
+initloc=162
 loc=$(wc -l < todo)
-todos_count=$(($loc - $initloc))
+todos_count=$((loc - initloc))
 
 GREEN="\033[0;32m"
 GREEN_E="\\\033\[0;32m"
@@ -44,7 +44,7 @@ function show_usage () {
     echo "  add         Add a new todo item"
     echo "  done        Mark an item completed"
     echo "  undo        Oops, something's not done yet"
-    echo "  delete      Delete an item"
+    echo "  kill        Delete an item"
     echo "  clean       Kill the todo list"
     echo
     echo "Warning: Using alphabetic characters, numerical digits and common"
@@ -54,14 +54,21 @@ function show_usage () {
 }
 
 function show_todo () {
-    echo -e -n "${LBLUE}TODO${NC} / "
-    stat -c %y todo
-    unfinished=$(tail -n $todos_count todo | grep -c "\[ \]")
-    echo -e "Unfinished items: [${RED}$unfinished${NC}]"
-    echo
-    plain=$(tail -n $todos_count todo | sed 's/# //')
-    pretty=$(echo "$plain" | sed "s=\[x\]=\[${GREEN_E}x${NC_E}\]=")
-    echo -e "$pretty"
+    if [[ $todos_count -eq 0 ]]; then
+        echo "todo: Nothing to do"
+    else
+        echo -e -n "${LBLUE}TODO${NC} / "
+        stat -c %y todo
+        unfinished=$(tail -n $todos_count todo | grep -c "\[ \]")
+        echo -e "Unfinished items: [${RED}$unfinished${NC}]"
+        echo
+        plain=$(tail -n $todos_count todo)
+        for i in `seq $todos_count`; do
+            plain=$(echo "$plain" | sed "${i}s=# =${i}. =")
+        done
+        pretty=$(echo "$plain" | sed "s=\[x\]=[${GREEN_E}x${NC_E}]=")
+        echo -e "$pretty"
+    fi
 }
 
 function delete_todo () {
@@ -70,13 +77,51 @@ function delete_todo () {
     done
 }
 
+function update_todo () {
+    show_todo
+    echo
+    echo -n "which number [base 1]: "
+    read item_no
+    if [[ $((item_no)) != $item_no ]]; then
+        echo "todo: Non-number characters are invalid"
+        exit 1
+    else
+        lines_to_del=$(($todos_count - $item_no + 1))
+        lines_to_buf=$lines_to_del
+        if [ $((lines_to_del)) -le $todos_count ] \
+            && [ $((lines_to_del)) -ge 1 ]; then
+            case "$1" in
+                "done")
+                    rexpr="1s=\[ \]=\[x\]="
+                    update_msg="[${GREEN}done${NC}] Nailed it!"
+                    ;;
+                "undo")
+                    rexpr="1s=\[x\]=\[ \]="
+                    update_msg="[${RED}undo${NC}] Keep it up!"
+                    ;;
+                "kill")
+                    rexpr=""
+                    update_msg="[${GREEN}kill${NC}] Hasta la Vista!"
+                    lines_to_buf=$(($todos_count - $item_no))
+                    ((todos_count -= 1))
+                    ;;
+            esac
+            buffer=$(tail -n $lines_to_buf todo)
+            delete_todo $lines_to_del
+            echo "$buffer" | sed "$rexpr" >> todo
+            echo -e "$update_msg"
+            echo
+            show_todo
+        else
+            echo "todo: Invalid item number"
+            exit 1
+        fi
+    fi
+}
+
 case "$#" in
     "0")
-        if [[ $loc = $initloc ]]; then
-            echo "todo: Nothing to do"
-        else
-            show_todo
-        fi
+        show_todo
         ;;
     "1")
         case "$1" in
@@ -89,42 +134,17 @@ case "$#" in
                 read new_item
                 echo -e "[${GREEN}todo${NC}] New item added! Off we go!"
                 echo
-                ((todos_count++))
+                ((todos_count += 1))
                 echo "# [ ] $new_item" >> todo
                 show_todo
                 ;;
-            "done")
-                show_todo
-                echo
-                echo -n "finish which [base 1]: "
-                read item_no
-                if [[ $((item_no)) != $item_no ]]; then
-                    echo "todo: Non-number characters are invalid"
-                    exit 1
-                else
-                    lines_to_delete=$(($todos_count - item_no + 1))
-                    if [ $((lines_to_delete)) -le $todos_count ] \
-                        && [ $((lines_to_delete)) -ge 1 ]; then
-                        buffer=$(tail -n $lines_to_delete todo)
-                        delete_todo $lines_to_delete
-                        echo "$buffer" | sed "1s/\[ \]/[x]/" >> todo
-                        echo -e "[${GREEN}done${NC}] Nailed it!"
-                        echo
-                        show_todo
-                    else
-                        echo "todo: Invalid item number"
-                        exit 1
-                    fi
-                fi
-                ;;
-            "undo")
-                echo undo
-                ;;
-            "delete")
-                echo delete
+            "done" | "undo" | "kill")
+                update_todo "$1"
                 ;;
             "clean")
                 delete_todo $todos_count
+                todos_count=0
+                show_todo
                 ;;
             *)
                 echo "todo: Invalid command: $1"
